# GLM-Realtime-parts

./: .env  .env_example  .gitignore  03_voice_client.py  FUNCTION_CALL_CHECKLIST.md  README.md  REORGANIZATION_COMPLETE.md  package-lock.json  package.json  requirements.txt  run_clientVAD_not_completed.py  run_quick_start.py  run_realtime.py  run_with_agent.py  run_with_agent_show_all_details.py  start_auto_sync.py  test_joke_audio.py
agents/: __init__.py  claude_code_client.py  claude_code_config.py  function_definitions.py
app/: __init__.py  audio_processing.py  quick_start.py  realtime.py  realtime_client_vad.py  realtime_with_agent.py
data/: save_data.jsonl
docs/: AGENT_INTEGRATION.md  README.md  REALTIME_SYNC_GUIDE.md  REORGANIZE_PLAN.md  USAGE.md  VOICE_CONFIG.md
glm-realtime-sdk/: .gitignore  CHANGELOG.md  GLM-Realtime-doc-for-llm.md  LICENSE.md  README.md
glm-realtime-sdk/python/: .gitignore  README.md  check_module.py  check_path.py  pyproject.toml
glm-realtime-sdk/python/rtclient/: __init__.py  deprecated_models.py  low_level_client.py  models.py
glm-realtime-sdk/python/rtclient/util/: id_generator.py  model_helpers.py  user_agent.py
glm-realtime-sdk/python/samples/: low_level_sample_audio.py  low_level_sample_function_call.py  low_level_sample_server_vad.py  low_level_sample_video.py  message_handler.py
memobase/: ROADMAP.md  readme.md  setup.py
memory/: __init__.py  auto_sync_daemon.py  check_daemon.sh  check_user.py  data_logger.py  memory_manager.py  realtime_sync.py  save_to_mem.py  start_daemon.sh  stop_daemon.sh
tests/: test.py  (+16 more)
(+152 files in other folders)
